<?xml version="1.0"?>
<package format="2">
  <name>camera_handle</name>
  <version>0.1.0</version>
  <description>The camera_handle package</description>
  <maintainer email="tonykolomeytsev@gmail.com">Anton Kolomeytsev</maintainer>
  <author email="tonykolomeytsev@gmail.com">Anton Kolomeytsev</author>
  <license>MIT</license>
  <url type="website">http://github.com/tonykolomeytsev/camera_handle</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
